# PyWeWorkFinance

./: .gitattributes  README.md  pyproject.toml
.github/workflows/: publish.yml
src/pyweworkfinance/: __init__.py  error.py  logger.py  main.py  models.py
src/pyweworkfinance/libs/linux/: WeWorkFinanceSdk_C.h
src/pyweworkfinance/libs/windows/: WeWorkFinanceSdk_C.h
