[project]
name = "pyweworkfinance"
version = "1.0.0"
description = "Python封装的企微会话存档SDK"
readme = "README.md"
authors = [
    { name = "yunchuan@yingdao", email = "yun.chuan@yingdao.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyweworkfinance"]









